--- a/IdentityDemo/Views/Home/About.cshtml
+++ b/IdentityDemo/Views/Home/About.cshtml
@@ -14,16 +14,21 @@
     }
 
     .jumbotron {
-        background-color: gray;
+        background-image: url('/img/HtunMyatAung/about_bg.png');
         background-size: cover;
+        background-repeat: no-repeat;
         background-position: center;
         height: 400px;
-        color: #fff;
-        text-align: center;
+        width:100%;
+        color: #000;
+        text-align: left;
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0px;
     }
+
+    
 
         .jumbotron h1 {
             font-size: 3.5rem;
@@ -60,8 +65,9 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-4">About uab zone</h1>
-            <p class="lead">Your go-to online shop for all your needs.</p>
+            <h1 class="display-4">About Swift Foods</h1>
+            <p class="lead">We provide the best food for you.</p>
+            <p class="lead">Feel the taste of most popular foods from anywhere and anytime.</p>
         </div>
     </div>
 
