--- a/IdentityDemo/Views/Order/Order_confirm.cshtml
+++ b/IdentityDemo/Views/Order/Order_confirm.cshtml
@@ -40,6 +40,9 @@
 </head>
 <body>
     <div class="container-fluid">
+        <div>
+            <img src="~/img/hywm_img/img/afterlogin/MainLogo.png" alt="logo" height="100" />
+        </div>
         <div class="invoice-header" style="margin-bottom: 20px; border-bottom: 2px solid #000; padding-bottom: 10px;">
             <div style="display: inline-block; width: 48%; vertical-align: top;">
                 <table style="width: 50%;">
@@ -51,13 +54,13 @@
                         <th>Date: </th>
                         <td>@Model.OrderDate</td>
                     </tr>
-                    
+
                 </table>
-                
+
             </div>
             <div style="display: inline-block; width: 48%; vertical-align: top; text-align: right;">
                 <table style="width: 30%; float: right;">
-                    
+
                     <tr>
                         <th style="text-align: left;width:54%;">Shop: </th>
                         <td style="text-align: right;">@Model.Shop.ShopName</td>
@@ -71,31 +74,32 @@
                         <td style="text-align: right;"> @Model.User.PhoneNumber</td>
                     </tr>
                 </table>
-                
+
             </div>
         </div>
         <div class="row">
-            
+
             <div class="col-md-8 container1">
+
                 <!-- Items Table -->
                 <div class="items" style="margin-bottom: 20px;">
                     <table style="width: 100%; border-collapse: collapse;">
                         <thead>
-                            <tr style="background-color: #f2f2f2;">
-                                <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Item Description</th>
-                                <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Quantity</th>
-                                <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Unit Price</th>
-                                <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Total</th>
+                            <tr style="background-color: #403C30;">
+                                <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color: white;">Item Description</th>
+                                <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color: white;">Quantity</th>
+                                <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color: white;">Unit Price</th>
+                                <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color: white;">Total</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model.Items)
                             {
                                 <tr>
-                                    <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@item.ItemName</td>
-                                    <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@item.ItemQuantity</td>
-                                    <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@item.ItemChangedPrice</td>
-                                    <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@(item.ItemQuantity * item.ItemChangedPrice)</td>
+                                    <td style="border: 1px solid #ffffff; padding: 8px;text-align:center;color:black;background-color:#D9D9D9">@item.ItemName</td>
+                                    <td style="border: 1px solid #ffffff; padding: 8px;text-align:center;color:black;background-color:#D9D9D9">@item.ItemQuantity</td>
+                                    <td style="border: 1px solid #ffffff; padding: 8px;text-align:center;color:black;background-color:#D9D9D9">@item.ItemChangedPrice</td>
+                                    <td style="border: 1px solid #ffffff; padding: 8px;text-align:center;color:black;background-color:#D9D9D9">@(item.ItemQuantity * item.ItemChangedPrice)</td>
                                 </tr>
                                 total += (item.ItemQuantity * item.ItemChangedPrice);
                             }
@@ -108,15 +112,15 @@
                             <table>
                                 <tr>
                                     <th style="padding: 8px;">Subtotal:</th>
-                                    <td style="text-align: right; padding: 8px;">$@total</td>
+                                    <td style="text-align: right; padding: 8px;">@total MMK</td>
                                 </tr>
                                 <tr>
                                     <th style=" padding: 8px;">Taxes (10%):</th>
-                                    <td style="text-align: right; padding: 8px;">$@(total * taxrate)</td>
+                                    <td style="text-align: right; padding: 8px;">@(total * taxrate) MMK</td>
                                 </tr>
                                 <tr>
                                     <th style=" padding: 8px;">Total Amount Due:</th>
-                                    <td style="text-align: right; padding: 8px;">$@(total + (total * taxrate))</td>
+                                    <td style="text-align: right; padding: 8px;" @(total + (total * taxrate))MMK</td>
                                 </tr>
                             </table>
                         </div>
@@ -134,13 +138,13 @@
                                 <input type="text" placeholder="Enter your current address" style="width:264px; height: 45px; margin-right:8px; margin-bottom:10px;" required />
 
                                 <div class="d-flex justify-content-end" style="margin-right: 8px; margin-top: 25px;">
-                                <a href="@Url.Action("Landing_page2","Hywm")" class="btn btn-secondary mr-1 d-flex align-items-center justify-content-center" style="width:130px;height:45px;">
-                                    Cancel
-                                </a>
-                                <button class="btn btn-primary d-flex align-items-center justify-content-center" style="width:130px;height:45px;" type="submit">
-                                    Confirm
-                                </button>
-                            </div>
+                                    <a href="@Url.Action("Landing_page2","Hywm")" class="btn btn-secondary mr-1 d-flex align-items-center justify-content-center" style="width:130px;height:45px;">
+                                        Cancel
+                                    </a>
+                                    <button class="btn btn-primary d-flex align-items-center justify-content-center" style="width:130px;height:45px;" type="submit">
+                                        Confirm
+                                    </button>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -151,7 +155,7 @@
             <div class="col-md-4 container2">
                 <!-- 40% width on medium and larger screens -->
                 <div class="container2">
-                    
+
                     <div class="d-flex justify-content-center">
                         <img id="blah" class="image-preview" src="/img/pay_qr&logo/kbz_pay_qr.jpg" alt="Preview Image" style="max-width: 400px; max-height: 450px; display: block;" />
                     </div>
