--- a/IdentityDemo/Views/Hywm/SingleShopView.cshtml
+++ b/IdentityDemo/Views/Hywm/SingleShopView.cshtml
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Spicy Meal Restaurant</title>
     <link href="~/css/uniquerestarutant.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" />
+    <link href="~/css/download_css/5_2_3_bootstrap.min.css" rel="stylesheet" />
     <style>
         .header-container {
             display: flex;
@@ -248,6 +248,7 @@
             height: 15vh;
             width: 100%;
         }
+        
 
         .submittocart1 {
             width: 60%;
@@ -365,7 +366,7 @@
                 </div>
             </div>
             <div class="submitcandiv">
-                <p>Total Price :<span id="alltotalprice"></span></p>
+                <p>Total Price :<span id="alltotalprice" style="right:5px;"></span></p>
                 <div class="d-flex justify-content-center">
                     <button type="submit" id="submittocart" class="btn btn-dark submittocart1" disabled>Purchase</button>
                 </div>
@@ -375,8 +376,9 @@
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="~/js/download_js/5_2_3_bootstrap.bundle.min.js"></script>
+
+    <script src="~/js/download_js/jquery-3.6.0.min.js"></script>
     <script>
         const isUserLoggedIn = @User.Identity.IsAuthenticated.ToString().ToLower();
         document.getElementById('allButton').addEventListener('click', function () {
