--- a/IdentityDemo/Views/Order/Invoice.cshtml
+++ b/IdentityDemo/Views/Order/Invoice.cshtml
@@ -13,48 +13,52 @@
 
     <!-- Combined and Minimized External Resources -->
     <link rel="stylesheet" href="~/css/download_css/4_5_3_bootstrap.min.css" />
-    <script src="~/js/download_js/jquery-3.5.1.slim.min.js"></script>    
+    <script src="~/js/download_js/jquery-3.5.1.slim.min.js"></script>
     <script src="~/js/download_js/2_5_4_popper.min.js"></script>
     <script src="~/js/download_js/4_5_3_bootstrap.min.js"></script>
     <script src="~/js/download_js/1_4_1_html2canvas.min.js"></script>
 </head>
 <body style="font-family: Arial, sans-serif; margin: 20px;background-color:#f0f0f0">
-    <div id="invoice-container" >
+    <div id="invoice-container">
         <!-- Invoice Header -->
-        <div class="invoice-header" style="margin-bottom: 20px; border-bottom: 2px solid #000; padding-bottom: 10px;">
+        <div class="invoice-header" style="margin-bottom: 20px; border-bottom: 2px solid #000; padding-bottom: 10px;background-color:#403C30;">
             <div style="display: inline-block; width: 48%; vertical-align: top;">
                 <table style="width: 60%;">
-                    <tr>
-                        <td colspan="2" style="text-align:left;"><h1>@Model.Shop.ShopName</h1></td>
+                    <tr style="color:white">
+                        <td colspan="2" style="text-align:left;padding-left:50px;"><h1>@Model.Shop.ShopName</h1></td>
                     </tr>
-                    <tr>
-                        <th>Address:</th>
-                        <td>@Model.Shop.ShopAddress</td>
+                    <tr style="color:white">
+                        <th style="padding-left:50px;">Address:</th>
+                        <td style="padding-left:30px">@Model.Shop.ShopAddress</td>
                     </tr>
-                    <tr>
-                        <th>Contact Details:</th>
-                        <td>@Model.Shop.ShopEmail</td>
+                    <tr style="color:white">
+                        <th style="padding-left:50px">Contact Details:</th>
+                        <td style="padding-left:30px">@Model.Shop.ShopEmail</td>
                     </tr>
-                    
+
                 </table>
             </div>
             <div style="display: inline-block; width: 48%; vertical-align: top; text-align: right;">
-                
+
                 <table style="width: 40%; float: right;">
-                    <tr>
-                        <td colspan="2" style="text-align: right;"><h1>Invoice</h1></td>
+                    <tr style="color:white">
+                        <td colspan="2">
+
+                            <img src="~/img/hywm_img/img/afterlogin/MainLogo.png" alt="logo" height="70" style="background-color:white;" />
+
+                        </td>
                     </tr>
-                    <tr>
+                    <tr style="color:white">
                         <th style="text-align: left;width:54%;">Invoice Id: </th>
                         <td style="text-align: right;">@Model.OrderDate.ToString("ddyyyyMM")@Model.OrderId</td>
                     </tr>
-                    <tr>
+                    <tr style="color:white">
                         <th style="text-align: left;">Invoice Date:</th>
                         <td style="text-align: right;">@Model.OrderDate.ToString("yyyy-MM-dd")</td>
                     </tr>
-                    
+
                 </table>
-                
+
             </div>
         </div>
 
@@ -68,21 +72,21 @@
         <div class="items" style="margin-bottom: 20px;">
             <table style="width: 100%; border-collapse: collapse;">
                 <thead>
-                    <tr style="background-color: #f2f2f2;">
-                        <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Item Description</th>
-                        <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Quantity</th>
-                        <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Unit Price</th>
-                        <th style="border: 1px solid #ddd; padding: 8px; text-align: center;">Total</th>
+                    <tr style="background-color: #403C30;">
+                        <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color:#ffffff">Item Description</th>
+                        <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color:#ffffff">Quantity</th>
+                        <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color:#ffffff">Unit Price</th>
+                        <th style="border: 1px solid #FFFFFF; padding: 8px; text-align: center;color:#ffffff">Total</th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model.Items)
                     {
                         <tr>
-                            <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@item.ItemName</td>
-                            <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@item.ItemQuantity</td>
-                            <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@item.ItemChangedPrice</td>
-                            <td style="border: 1px solid #ddd; padding: 8px;text-align:center">@(item.ItemQuantity * item.ItemChangedPrice)</td>
+                            <td style="border: 1px solid #FFFFFF; padding: 8px;text-align:center;color:black">@item.ItemName</td>
+                            <td style="border: 1px solid #FFFFFF; padding: 8px;text-align:center;color:black">@item.ItemQuantity</td>
+                            <td style="border: 1px solid #FFFFFF; padding: 8px;text-align:center;color:black">@item.ItemChangedPrice</td>
+                            <td style="border: 1px solid #FFFFFF; padding: 8px;text-align:center;color:black">@(item.ItemQuantity * item.ItemChangedPrice)</td>
                         </tr>
                         total += (item.ItemQuantity * item.ItemChangedPrice);
                     }
@@ -114,7 +118,7 @@
                 <p style="margin: 0;">Thank you for your business!<br>If you have any questions, please contact us at swiftfoods48@gmail.com</p>
             </div>
         </div>
-         
+
     </div>
     <!-- Buttons for Download and Cancel -->
     <div class="d-flex justify-content-end w-100">
@@ -135,7 +139,7 @@
                     <p>Your order has been saved as Image.<br />Thank you for your business!</p>
                 </div>
                 <div class="modal-footer">
-                    
+
                     <form method="post" action="/Order/SendInvoiceEmail">
                         <input type="hidden" name="htmlContent" id="htmlContent" />
                         <button type="submit" class="btn btn-primary" style="width: 70px;">Ok</button>
@@ -145,8 +149,8 @@
         </div>
     </div>
 
-    
-    
+
+
     <!-- JavaScript for Invoice Handling -->
     <script>
         // Example of targeting body indirectly through JavaScript
@@ -154,17 +158,17 @@
         // Capture HTML content of the invoice for sending via email
         var invoiceHtml = document.getElementById('invoice-container').innerHTML;
         document.getElementById('htmlContent').value = invoiceHtml;
-        
+
         function confirmAndDownload() {
             downloadAsImage().then(function () {
-                showThankYouModal();                   
-                
+                showThankYouModal();
+
             });
         }
 
         function downloadAsImage() {
             var element = document.getElementById('invoice-container');
-            
+
             return html2canvas(element).then(function (canvas) {
                 var link = document.createElement('a');
                 link.href = canvas.toDataURL('image/png');
@@ -181,14 +185,12 @@
         }
 
         function goBackToAnotherPage() {
-           
+
             window.location.href = '/Order/SaveInvoice';
         }
         function cancelgoBackToAnotherPage() {
             window.location.href = '/Hywm/Landing_page2';
         }
-        
-    
     </script>
 </body>
 </html>
